--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_core: ^3.13.0
   equatable: ^2.0.7
   firebase_auth: ^5.5.3
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
+  cloud_firestore: ^5.6.7
 
 dev_dependencies:
   flutter_test:
